examples/test/testpolicy15016.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15016
  namespace: namespace333
spec:
  podSelector:
    matchLabels:
      key21: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value6
      podSelector:
        matchLabels:
          key20: value0
          key13: value5
          key4: value27
